# SimpleChat

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  a.out  client.cpp  client.h  common_headers.h  macros.h  room_participants.h  server.cpp  server.h  timestamp.h  vcpkg.json  worker_thread.h
net/: common_headers.h  connection.h  message.h  thread_safe_queue.h
